# fact_checker

./: .env.example  .gitignore  AGENTS.md  Dockerfile  FEATURES.md  IMPLEMENTATION_PLAN.md  README.md  SRS.md  alembic.ini  claim_extraction.py  docker-compose.yml  harness.py  main.py  media.py  models.py  openrouter.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: REPO_PATCH_PLAN.md
mcp/: SKILL.md  __init__.py  fact_checker_mcp_server.py  servers.md
migrations/: schema.sql
skills/claim-extraction/: SKILL.md
skills/deep-research/: SKILL.md
skills/evidence-retrieval/: SKILL.md
skills/image-analysis/: SKILL.md
skills/ingest/: SKILL.md
skills/verdict/: SKILL.md
src/fact_checker/: __init__.py  api.py  auth.py  cli.py  config.py  db.py  harness.py  models.py  tui.py
src/fact_checker/agents/: claim_extractor.py  deep_research_agent.py  evidence_agent.py  image_analyst.py  research_workflow.py  verdict_agent.py
src/fact_checker/prompts/: claim_extraction.md  deep_research.md  evidence_retrieval.md  image_analysis.md  verdict_draft.md
src/fact_checker/services/: audio_ingest.py  cache.py  embedder.py  file_router.py  ingest.py  media.py  pdf_ingest.py  rate_limiter.py  search_providers.py  social_media_ingest.py  vector_store.py  vision.py  web_scraper.py  webhook_notifier.py  yolo_detector.py
src/fact_checker/skills/: __init__.py  claim_skills.py  evidence_skills.py  image_skills.py  ingest_skills.py  research_skills.py  verdict_skills.py
tests/: conftest.py  test_agents.py  test_api.py  test_pipeline.py
