[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fact-checker"
version = "0.1.0"
description = "Lightweight video fact-checking harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.8.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
]

[project.scripts]
fact-checker = "fact_checker.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
