[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fact-checker"
version = "0.1.0"
description = "AI-powered video fact-checking pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core LLM
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    # Settings & validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    # Web / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # CLI & TUI
    "typer>=0.12.3",
    "rich>=13.7.0",
    "textual>=0.80.0",
    # Transcript / ASR
    "youtube-transcript-api>=0.6.0",
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.1.0",
    # Utilities
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "fact-checker[dev]",
]

[project.scripts]
fact-checker = "fact_checker.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
